# example-openai-whisper

./: .gitignore  pyproject.toml
