[tool.poetry]
name = "example-openai-whisper"
version = "0.1.0"
description = ""
authors = ["Ramil Aleshkin"]
readme = "README.md"
packages = [{include = "example_openai_whisper"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
